--- a/.editorconfig
+++ b/.editorconfig
@@ -7,11 +7,11 @@ root = true
 [*]
 end_of_line = lf
 insert_final_newline = true
-trim_trailing_whitespace = false
+trim_trailing_whitespace = true
 
 # Matches multiple files with brace expansion notation
 # Set default charset
 [*.{js,html,md,css,sql,py}]
 charset = utf-8
 indent_style = space
-indent_size = 4
+indent_size = 2
